# pbpk-mcp-server

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MODEL_DESCRIPTION.md  NOTICE.md  README.md  TUTORIAL.md  pyproject.toml  server.py
core/: acat.py  audit.py  citation.py  clearance_spec.py  compound.py  data_fitting.py  ddi_dynamic.py  disease_states.py  drug_lookup.py  ehc.py  fg_prediction.py  hepatic_models.py  invariants.py  ivive.py  lymphatic.py  partition_coeff.py  pbpk_model.py  physiology.py  pk_calculator.py  pksim_db.py  pksim_import.py  population.py  protein_binding.py  sensitivity.py  session.py  species.py  time_varying.py  tissue_binding.py  transporter_spec.py  transporters.py  units.py  validation.py  web_param_search.py
prompts/: provenance_audit.py  user_guide.py  web_search_grounding.py
tests/: test_estimation.py  test_silent_fallback.py  test_v28_patches.py  test_web_param_search.py
tools/: pbpk_tools.py  session_tools.py
