[project]
name = "pbpk-mcp"
version = "0.1.0"
description = "Whole-body PBPK modeling MCP server (PK-Sim/Simcyp-style)"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "pydantic>=2.0",
    "pint>=0.23",
    "requests>=2.28",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
